# SlicerDetectionViewer

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  main.py
main/Resources/UI/: main.ui
